Commit 254.3 Add - \Views\Sellers\Index

--- a/SalesMebProject/Views/Sellers/Index.cshtml
+++ b/SalesMebProject/Views/Sellers/Index.cshtml
@@ -1,9 +1,44 @@
-﻿
+﻿@model IEnumerable<SalesMebProject.Models.Seller>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Sellers";
 }
 
-<h2>Sellers</h2>
+<h2>@ViewData["Title"]</h2>
 
-<p>Sellers index page</p>
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BirthDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BaseSalary)
+            </th>
+        </tr>  
+    </thead>
+    <tbody>
+        @foreach (var item in Model) {
+             <tr>
+                <td>
+                    @Html.DisplayFor(ModelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(ModelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(ModelItem => item.BirthDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(ModelItem => item.BaseSalary)
+                </td>
+            </tr>
+         }
+    </tbody>
+</table>
 
