--- a/SalesMebProject/Views/Sellers/Create.cshtml
+++ b/SalesMebProject/Views/Sellers/Create.cshtml
@@ -4,7 +4,6 @@
 }
 
 <h2>@ViewData["Title"]</h2>
-
 <h4>Seller</h4>
 <hr />
 <div class="row">
@@ -42,6 +41,6 @@
         </form>
     </div>
 </div>
-@section Script{ 
+@section Scripts{ 
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
